# gmerlin

./: index.html  params.json  project.config
gavl/: AUTHORS  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  cpuinfo.sh  cvs_clean.sh  gavl.pc.in  gavl.spec.in  update_copyright.sh
gavl/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
gavl/doc/: Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  api.html  api_index.html  api_intro.html  index.html  mainpage.incl  matrices.html  video.html
gavl/gavl/: Makefile.am  Makefile.am.in  Makefile.in  _planar_420_422.c  _video_copy.c  absdiff.c  arith128.c  audio.c  audio.lo  audiobuffer.c  audiobuffer.lo  audioconnector.c  audioconverter.c  audioformat.c  audioformat.lo  audioframe.c  audioframe.lo  audiooptions.c  audiosink.c  audiosource.c  blend.c  chapterlist.c  colorchannel.c  colorspace.c  colorspace.lo  colorspace_macros.h  compression.c  cputest.c  cputest.lo  csp_packed_packed.h  csp_packed_planar.h  csp_planar_packed.h  csp_planar_planar.h  deinterlace.c  deinterlace_blend.c  deinterlace_copy.c  deinterlace_scale.c  dsp.c  dsputils.c  edl.c  (+47 more)
gavl/include/: Makefile.am  Makefile.am.in  Makefile.in  accel.h  arith128.h  attributes.h  audio.h  blend.h  bswap.h  colorspace.h  deinterlace.h  dsp.h  gavfprivate.h  gavlconfig.h  gavlconfig.h.in  interleave.h  macros.h  memalign.h  mix.h  sampleformat.h  samplerate.h  scale.h  transform.h  video.h  volume.h
gavl/m4/: Makefile.am  Makefile.in  check_funcs.m4  clip_mode.m4  gavl_float.m4  gavl_simd.m4
gavl/src/: Makefile.am  Makefile.in  O3.txt  benchmark.c  blend_test.c  colorspace_test  colorspace_test.c  colorspace_time  colorspace_time.c  convolvetest.c  deinterlace_time.c  deinterlacetest.c  dump_frame_table.c  fill_test.c  funroll-all-loops.txt  gavfdump.c  gen_colorspace_tables.c  gen_ssim_table.c  old.txt  out.txt  out1.txt  out2.txt  out_for_loops.txt  pixelformat_penalty.c  plot_scale_kernels.c  pngutil.c  pngutil.h  scale_time.c  scaletest.c  timescale_test.c  timeutils.c  timeutils.h  volume_test.c
gavl/utils/: Makefile.in
gmerlerra/: Makefile.am  aclocal.m4  configure.ac  cvs_clean.sh
gmerlerra/apps/: Makefile.am  gmerlerra.c
gmerlerra/icons/: Makefile.am  buttons.xcf
gmerlerra/include/: Makefile.am  clipboard.h  editops.h  filecache.h  framecache.h  medialist.h  outstream.h  project.h  renderer.h  thumbnailfactory.h  track.h  types.h
gmerlerra/lib/: Makefile.am  clipboard.c  clipboard_xml.c  composite_audio.c  composite_video.c  editfuncs.c  editops.c  filecache.c  framecache.c  instream.c  medialist.c  medialist_xml.c  outstream.c  outstream_xml.c  project.c  project_xml.c  projectsettings.c  render_outstream.c  renderer.c  thumbnailfactory.c  timerange.c  track.c  track_xml.c
gmerlerra/plugins/: Makefile.am  i_gmerlerra.c
gmerlerra/tests/: Makefile.am  timeruler.c
gmerlin/: AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  README  TODO  acinclude.m4  autogen.sh  configure.ac  configure.in  cvs_clean.sh  gmerlin-gtk.pc.in  gmerlin.pc.in  gmerlin.spec.in  make_manpages  make_potfiles  make_texis  plugin.sym  update_copyright.sh
gmerlin/apps/: Makefile.am
gmerlin/doc/: Doxyfile  Doxyfile.in  Makefile.am  gavl.tags  gmerlin.texi  gmerlin_play.texi  gmerlin_player.texi  gmerlin_record.texi  gmerlin_remote.texi  gmerlin_transcoder.texi  gmerlin_transcoder_remote.texi  mainpage.incl  plugins.texi  usersguide.html
gmerlin/icons/: Makefile.am  drive_16.xcf.bz2  hardware_16.xcf.bz2  icons.xcf.bz2  tracks_dnd_32.xcf.bz2
gmerlin/include/: Makefile.am  accelerator.h  bg_sem.h  bgfreetype.h  bgfrei0r.h  bggavl.h  bgladspa.h  bglv.h  bgshm.h  bgsocket.h  bgsqlite.h  cfg_dialog.h  cfg_registry.h  charset.h  cmdline.h  converters.h  edl.h  encoderinfo.h  fifo.h  filters.h  float_cast.h  gavfenc.h  http.h  imagetransform.h  keycodes.h  language_table.h  lcdproc.h  log.h  md5.h  mediadb_private.h  msgqueue.h  osd.h  ovl2text.h  parameter.h  player.h  player_thread.h  playermsg.h  playerprivate.h  plugin.h  pluginreg_priv.h  (+22 more)
gmerlin/lib/: Makefile.am  accelerator.c  album.c  album_xml.c  audiofilters.c  bgfrei0r.c  bggavl.c  bgladspa.c  bglv.c  bgplug.c  bgplug_io.c  bgshm.c  bgxml.c  cfg_item.c  cfg_registry.c  cfg_section.c  cfg_xml.c  chapterlist.c  chapterlist_xml.c  charset.c  cmdline.c  converters.c  db.c  db_audio.c  db_audio_vfolder.c  db_audioalbum.c  db_dir.c  db_file.c  db_image.c  db_object.c  db_playlist.c  db_root.c  db_scan.c  db_stringcache.c  db_thumbnail.c  db_vfolder.c  device.c  edl.c  edl_xml.c  edldec.c  (+75 more)
gmerlin/m4/: Makefile.am  check_funcs.m4  gl.m4
gmerlin/osd/: GmerlinOSD.afm  GmerlinOSD.pfb  Makefile.am  osd.sfd
gmerlin/plugins/: Makefile.am  Makefile.in
gmerlin/po/: ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  de.gmo  de.po  fi.po  gmerlin.pot
gmerlin/skins/: Makefile.am
gmerlin/tests/: Makefile.am  (+40 more)
gmerlin_avdecoder/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.in  cvs_clean.sh  ffmpeg_codecs.txt  gmerlin_avdec.pc.in  gmerlin_avdec.spec.in  libtool  lqt_avcodec.m4  make_potfiles  update_copyright.sh  update_libw32dll.sh
gmerlin_effectv/: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  cvs_clean.sh  make_potfiles
gmerlin_encoders/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  cvs_clean.sh  gmerlin_encoders.spec.in  update_copyright.sh
gmerlin_goom/: INSTALL  Makefile.am  README  autogen.sh  configure.ac  cvs_clean.sh
gmerlin_mozilla/: Makefile.am  README  autogen.sh  configure.ac  cvs_clean.sh  gmerlin-mozilla-disable.in  gmerlin-mozilla-enable.in
gmerlin_visualizer/: AUTHORS  Makefile.am  README  autogen.sh  configure.ac  cvs_clean.sh  gmerlin-visualizer.desktop.in  gmerlin-visualizer.spec.in  gmerlin_visualizer_launcher
lemuria/: Makefile.am  acinclude.m4  autogen.sh  configure.ac  lemuria.sym
(+1732 files in other folders)
